Changes configuration file format.
Signed-off-by: Kouhei Maeda <mkouhei@palmtb.net>

--- a/examples/glaneuses.conf
+++ b/examples/glaneuses.conf
@@ -1,17 +1,9 @@
-[debian]
-email=guest@example.org
+[global]
 
-[pypi]
-username=guest
-
-[github]
-username=guest
-
-[pgp]
-keyid=0x00000000
-
-[bitbucket]
-username=guest
-
-[rubygems]
-username=guest
+[account]
+debian:     guest@example.org
+pypi:       guest
+github:     guest
+pgp:        0x00000000
+bitbucket:  guest
+rubygems:   guest
