Refactors config struct instead of account struct.
Signed-off-by: Kouhei Maeda <mkouhei@palmtb.net>

--- a/examples/glaneuses.conf
+++ b/examples/glaneuses.conf
@@ -2,8 +2,8 @@
 
 [account]
 debian:     guest@example.org
-pypi:       guest
-github:     guest
+pypi:       guest_pypi
+github:     guest_github
 pgp:        0x00000000
-bitbucket:  guest
-rubygems:   guest
+bitbucket:  guest_bitbucket
+rubygems:   guest_gems
