Ignore uid of PGP.
Signed-off-by: Kouhei Maeda <mkouhei@palmtb.net>

--- a/examples/glaneuses.conf
+++ b/examples/glaneuses.conf
@@ -9,3 +9,6 @@ pgp:        0x00000000
 bitbucket:  guest_bitbucket
 rubygems:   guest_gems
 hackage:    guest_hackage
+
+[ignore]
+uids:       ignore@example.com,ignore@example.net
